--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Computer Science Essentials</title>
 </head>
 <body>
-	<h1> Hello World! </h2>
+	<div class= "container">
+		
+		<div class = "row"></div>
+		
+	<h1>Computer Science Essentials</h2>
+		
+	</div>
 </body>
 </html>
