--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		
 		<div class = "row"></div>
 		
-	<h1>Computer Science Essentials</h2>
+	<h1>Computer Science Essentials</h1>
+		<h2>The new computer science course that is being offered and aviable in 2018</h2>
 		
 	</div>
 </body>
