--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 </head>
 <body>
 	<div class= "container">
+		<h3>About</h3>
 		
-		<div class = "row"></div>
+		<div class = "row" id=menu"></div>
+					   <h4>Menu</h>
+					   <h5>Contact</h5>
+		
 		
 	<h1>Computer Science Essentials</h1>
 		<h2>The new computer science course that is being offered and aviable in 2018</h2>
