--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>Computer Science Essentials</h1>
 		<h2>The new computer science course that is being offered and aviable in 2018</h2>
+	<p>The class offers a new step in the CSP courses.</p>
 	<div class= "container">
 		<h3>About</h3>
 		
