--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h2>The new computer science course that is being offered and aviable in 2018</h2>
 	<div class= "container">
 		<h3>About</h3>
-		<img src="Website picture1.gif" alt=Using HTML">
+		<img src="Website picture1.jpg" alt=Example of html">
 		<p>The class offers a new step in the CSP courses.</p>
 		
 		<div class = "row" id=menu"></div>
