--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<h2>The new computer science course that is being offered and aviable in 2018</h2>
 	<div class= "container">
 		<h3>About</h3>
+		<img src="business_logo.pdf" alt=orgnaization logo">
 		<img src="Website_Picture_1.jpg" alt=Example">
 		<p>The class offers a new step in the CSP courses.</p>
 		
