--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html lang="en">
 <head>
-	<title><Browser Icon</title>
+	<title>ComputerScienceEssentials</title>
 	<link rel="icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Computer Science Essentials</title>
-		<img src="business_logo.png" alt="orgnaization logo">
+		
 </head>
 <body>
 	<h1>Computer Science Essentials</h1>
 		<h2>The new computer science course that is being offered and aviable in 2018</h2>
 	<div class= "container">
 		<h3>About</h3>
+		<img src="business_logo.png" alt="orgnaization logo">
 		<img src="Website_Picture_1.jpg" alt=Example">
 		<p>The class offers a new step in the CSP courses.</p>
 		
