--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
 	<h1>Computer Science Essentials</h1>
 		<h2>The new computer science course that is being offered and aviable in 2018</h2>
+	<p>Students will experience the major topics, big ideas, and computational thinking practices
+		used by computing professionals to solve problems and create value for others.
+		This course will empower students to develop computational thinking skills while building
+		confidence that prepares them to advance to Computer Science Principles and Computer Science A.</p>
 	<div class= "container">
 		<h3>About</h3>
 		<img src="Website_Picture_1.jpg" alt=Example">
