--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Computer Science Essentials</title>
 	<center><img src="business_logo.png" alt="orgnaization logo"></center>
+	<style>
+		body{
+			backroundimage: url("LSHS_Photo_1.jpg);
+				}
 </head>
 <body>
 	<h1>Computer Science Essentials</h1>
