--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Computer Science Essentials</title>
 	<center><img src="business_logo.png" alt="orgnaization logo"></center>
-	<img src="CSE_Classroom.JPG" alt="orgnaization logo">
-	<img src="CSE_Group.jpg" alt="orgnaization logo">
-	<img src="CSE_Robot.jpg" alt="orgnaization logo">
-	<img src="CSE_Sphereo.jpg" alt="orgnaization logo">
-	<img src="CSE_python.jpg" alt="orgnaization logo">
+	<img src="CSE_Classroom.JPG" alt="orgnaization logo" style="width:500px;height:600px;">
+	<img src="CSE_Group.jpg" alt="orgnaization logo" style="width:500px;height:600px;">
+	<img src="CSE_Robot.jpg" alt="orgnaization logo" style="width:500px;height:600px;">
+	<img src="CSE_Sphereo.jpg" alt="orgnaization logo" style="width:500px;height:600px;">
+	<img src="CSE_python.jpg" alt="orgnaization logo" style="width:500px;height:600px;">
 	
 </head>
 <body>
